Add StarsConverter with Tests

--- a/app/src/main/res/layout/item_repo.xml
+++ b/app/src/main/res/layout/item_repo.xml
@@ -2,56 +2,71 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/parent_layout_repo"
-    android:padding="16dp">
-    <TextView
-        android:id="@+id/repo_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="tensorFlow"/>
-    <TextView
-        android:id="@+id/repo_description"
-        android:layout_below="@id/repo_name"
-        android:layout_marginTop="8dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Computation using data flows graph for scalable machine learning"/>
-    <ImageView
-        android:id="@+id/repo_owner_avatar"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@drawable/ic_home_black_24dp"
-        android:layout_marginTop="8dp"
-        android:layout_below="@+id/repo_description"/>
-    <TextView
-        android:id="@+id/repo_owner_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/repo_owner_avatar"
-        android:layout_toRightOf="@id/repo_owner_avatar"
-        android:layout_marginLeft="4dp"
-        android:text="tensorflow"/>
-
-    <ImageView
-        android:id="@+id/repo_star"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@drawable/ic_star_black_24dp"
-        android:layout_marginTop="8dp"
-        android:layout_below="@+id/repo_description"
-        android:layout_toLeftOf="@id/repo_stars_number"/>
-    <TextView
-        android:id="@+id/repo_stars_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/repo_owner_avatar"
-        android:layout_alignParentEnd="true"
-        android:layout_marginLeft="4dp"
-        android:text="5.1k"/>
-    <View
+    android:id="@+id/parent_layout_repo">
+    <RelativeLayout
+        android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#f0f0f0"
-        android:layout_below="@id/repo_owner_name"
-        android:layout_marginTop="12dp"/>
+        android:layout_height="wrap_content"
+        android:padding="16dp">
+        <TextView
+            android:id="@+id/repo_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:text="tensorFlow"/>
+        <TextView
+            android:id="@+id/repo_description"
+            android:layout_below="@id/repo_name"
+            android:layout_marginTop="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="2"
+            android:text="Computation using data flows graph for scalable machine learning"/>
+        <ImageView
+            android:id="@+id/repo_owner_avatar"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_home_black_24dp"
+            android:layout_marginTop="8dp"
+            android:layout_below="@+id/repo_description"/>
+        <TextView
+            android:id="@+id/repo_owner_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/repo_owner_avatar"
+            android:layout_toRightOf="@id/repo_owner_avatar"
+            android:layout_marginLeft="4dp"
+            android:maxLines="1"
+            android:text="tensorflow"/>
+
+        <ImageView
+            android:id="@+id/repo_star"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_star_black_24dp"
+            android:layout_marginTop="8dp"
+            android:layout_below="@+id/repo_description"
+            android:layout_toLeftOf="@id/repo_stars_number"/>
+        <TextView
+            android:id="@+id/repo_stars_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:layout_alignBottom="@id/repo_owner_avatar"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="4dp"
+            android:text="5.1k"/>
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/content">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#f0f0f0"
+            android:layout_marginTop="4dp"/>
+    </RelativeLayout>
+
 </RelativeLayout>
