Get all data from github api ( Challenge completed without bonus )

--- a/app/src/main/res/layout/item_repo.xml
+++ b/app/src/main/res/layout/item_repo.xml
@@ -8,20 +8,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp">
+
         <TextView
             android:id="@+id/repo_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="1"
-            android:text="tensorFlow"/>
+            android:text="tensorFlow"
+            android:textStyle="bold" />
+
         <TextView
             android:id="@+id/repo_description"
-            android:layout_below="@id/repo_name"
-            android:layout_marginTop="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/repo_name"
+            android:layout_marginTop="8dp"
             android:maxLines="2"
-            android:text="Computation using data flows graph for scalable machine learning"/>
+            android:text="Computation using data flows graph for scalable machine learning"
+            android:textStyle="italic" />
         <ImageView
             android:id="@+id/repo_owner_avatar"
             android:layout_width="24dp"
@@ -34,8 +38,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/repo_owner_avatar"
-            android:layout_toRightOf="@id/repo_owner_avatar"
-            android:layout_marginLeft="4dp"
+            android:layout_toEndOf="@id/repo_owner_avatar"
+            android:layout_marginStart="4dp"
             android:maxLines="1"
             android:text="tensorflow"/>
 
@@ -45,8 +49,9 @@
             android:layout_height="24dp"
             android:src="@drawable/ic_star_black_24dp"
             android:layout_marginTop="8dp"
+            android:tint="@color/colorPrimaryDark"
             android:layout_below="@+id/repo_description"
-            android:layout_toLeftOf="@id/repo_stars_number"/>
+            android:layout_toStartOf="@id/repo_stars_number"/>
         <TextView
             android:id="@+id/repo_stars_number"
             android:layout_width="wrap_content"
